2003-12-13  Martin Baulig  <martin@ximian.com>

	* test-154.cs: Added testcase for bug #48962.

2003-12-11  Martin Baulig  <martin@ximian.com>

	* test-154.cs: Added testcases for bugs #49153, #49359 and #49602.

2003-11-21  Miguel de Icaza  <miguel@ximian.com>

	* test-150.cs: Improved test.

2003-10-17  Martin Baulig  <martin@ximian.com>

	* gen-test.sh: Removed.

	* gen-test.pl: New file; this is a perl script which runs all the
	generics tests.

2003-10-15  Miguel de Icaza  <miguel@ximian.com>

	* test-49.cs: Improved test with input from bug #48761

2003-10-10  Martin Baulig  <martin@ximian.com>

	* gen-15.cs: New test for generic methods.

2003-09-29  Martin Baulig  <martin@ximian.com>

	* gen-14.cs: New generics test.

2003-09-27  Martin Baulig  <martin@ximian.com>

	* gen-11.cs, gen-12.cs: New generics tests.

	* gen-13-dll.cs, gen-13.exe.cs: New generics test; this test
	consists of two files and tests whether this works if it's in two
	files and not just in one.

2003-09-19  Martin Baulig  <martin@ximian.com>

	* gen-10.cs: New generics test.

2003-09-18  Martin Baulig  <martin@ximian.com>

	* gen-9.cs: New generics test.

2003-09-16  Martin Baulig  <martin@ximian.com>

	* gen-3.cs, gen-4.cs, gen-5.cs, gen-6.cs, gen-7.cs, gen-8.cs: New
	generics tests.

2003-09-02  Ravi Pratap  <ravi@ximian.com>

	* test-102.cs: Improve test.

2003-08-26  Martin Baulig  <martin@ximian.com>

	* test-215.cs: New test for bug #47927.

2003-08-26  Martin Baulig  <martin@ximian.com>

	* verify-7.cs: New test for bug #47681.

2003-08-26  Martin Baulig  <martin@ximian.com>

	* test-214.cs: New test for bug #47853.

2003-08-25  Martin Baulig  <martin@ximian.com>

	* test-213.cs: New test for bug #47822.

2003-08-22  Martin Baulig  <martin@ximian.com>

	* test-154.cs: Added testcase for bug #46949.

2003-08-22  Martin Baulig  <martin@ximian.com>

	* test-154.cs: Added testcase for bug #47095.

2003-08-04  Martin Baulig  <martin@ximian.com>

	* Makefile: Put back test-211.cs.
