@@ -1,0 +1,12 @@
+
+using System;
+
+public class M1 {
+
+	public string Foo;
+
+	public M1 (string foo) {
+		this.Foo = foo;
+	}
+}
+
